--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,6 @@ button {
   gap: 15px;
   align-items: center;
 }
-
 .card img {
   border-radius: 50%;
   border: 2px solid #fff;
@@ -74,4 +73,100 @@ button {
   margin: 0;
   font-size: 14px;
   color: #ccc;
+}
+.d1 {
+  display: flex;
+  height: 100vh;
+  background: #0f0f0f;
+  color: #fff;
+}
+
+.d2 {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.d3 {
+  padding: 20px;
+  overflow: auto;
+}
+
+.n1 {
+  height: 60px;
+  background: #111;
+  border-bottom: 1px solid #333;
+  display: flex;
+  align-items: center;
+  padding-left: 20px;
+}
+
+.n2 {
+  font-size: 18px;
+}
+
+.s1 {
+  width: 220px;
+  background: #111;
+  border-right: 1px solid #333;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.s2 {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.s3 {
+  text-decoration: none;
+  color: #ccc;
+  font-size: 14px;
+}
+
+.s3:hover {
+  color: #fff;
+}
+
+.s4 {
+  padding: 8px;
+  background: #fff;
+  color: #000;
+  border: none;
+  cursor: pointer;
+}
+
+.t1 {
+  background: #111;
+}
+
+.t2 {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.t2 td {
+  border: 1px solid #333;
+  padding: 8px;
+  font-size: 13px;
+}
+.t2 td:hover{
+  background-color: #1a1a1a;
+}
+.t2 thead td {
+  background: #1a1a1a;
+  font-weight: bold;
+}
+
+.t3 {
+  width: 75%;
+  background: #fff;
+  color: #000;
+  border: none;
+  margin: 5px;
+  cursor: pointer;
 }
